# jenkins_project

./: README.md  t.sh
forest_cover_prediction/: README.md  pyproject.toml
forest_cover_prediction/forest_cover_pred/: __init__.py  dataset.py  features.py  metrics_tab.py  plots.py
forest_cover_prediction/forest_cover_pred/modeling/: predict.py  train.py
forest_cover_prediction/notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_evaluation.ipynb  cover_soil_counts.html
forest_cover_prediction/reports/metrics/: overall_metrics.csv  per_class_metrics.csv
